페이지 출력 성공!

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=secret
+DB_PORT=3306
+DB_USER=gouser
+DB_PASSWORD=gopassword
+DB_NAME=goblog
