1차 성공 그러나 5173으로 접속해야하고 backend에서 처리하지 못함

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,20 +1,22 @@
-version: "3.8"
-
 services:
   app:
-    build: .
+    build:
+      target: backend-builder
+    volumes:
+      - ./backend:/app
+    command: air -c .air.toml
     environment:
       - GIN_MODE=debug
-    volumes:
-      - .:/app # Go 코드 변경 감지
-      - ./web/svelte/public:/app/web/static # Svelte 빌드 결과 동기화
-    command: sh -c "go run cmd/server/main.go" # Go 핫 리로드
 
-  svelte-dev: # 프론트엔드 개발 서버
-    image: node:20-alpine
+  frontend:
+    image: oven/bun:1.2.5
+    working_dir: /app/frontend
     ports:
       - "5173:5173"
-    working_dir: /app/web/svelte
     volumes:
-      - ./web/svelte:/app/web/svelte
-    command: sh -c "npm install && npm run dev"
+      - ./frontend:/app/frontend
+      - frontend_bun_cache:/root/.bun
+    command: sh -c "bun install && bun run dev"
+
+volumes:
+  frontend_bun_cache:
