--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,16 +8,15 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - GIN_MODE=debug
+      - GIN_MODE=release
       - DB_HOST=mysql
       - DB_USER=gouser
       - DB_PASSWORD=gopassword
       - DB_NAME=goblog
-    volumes:
-      - ./backend:/app # 개발 시 소스 코드 변경 감지
     depends_on:
       mysql:
         condition: service_healthy
+    restart: unless-stopped
 
   frontend:
     build:
@@ -25,12 +24,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app # 개발 시 소스 코드 변경 감지
-      - /app/node_modules
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - VITE_API_URL=http://localhost:8080
+    restart: unless-stopped
 
   mysql:
     image: mysql:8
@@ -43,12 +40,12 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 3
+    restart: unless-stopped
 
 volumes:
   mysql_data:
