--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,14 +3,17 @@ FROM oven/bun:1.2.5 AS builder
 WORKDIR /app
 
 # Install dependencies
-COPY package.json bun.lockb ./
+COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
 # Copy source code
 COPY . .
 
 # Build application
-RUN bun run build
+RUN bun run build || (echo "Build failed"; exit 1)
+
+# Verify build directory
+RUN ls -la /app
 
 # Runtime stage
 FROM oven/bun:1.2.5-slim
