--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,42 +1,16 @@
 {
-  "name": "svelte",
-  "private": true,
-  "version": "0.0.1",
+  "name": "starry-star",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.2.7",
-    "@eslint/js": "^9.22.0",
-    "@sveltejs/adapter-auto": "^4.0.0",
-    "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.20.1",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.15",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-svelte": "^3.3.3",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.23.2",
-    "svelte-check": "^4.1.5",
-    "tailwindcss": "^4.0.15",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0",
-    "vite": "^6.2.2"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "start": "serve -s dist"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "astro": "^5.5.3",
     "serve": "^14.2.4"
   }
 }
