--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,27 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name example.com;  # 도메인으로 변경
+
+    # Certbot 인증을 위한 경로
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # HTTP 요청을 HTTPS로 리다이렉트
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name example.com;  # 도메인으로 변경
+
+    # SSL 인증서 경로 (Certbot이 생성한 인증서)
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+
+    # SSL 설정
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # 프론트엔드 서빙
     location / {
