--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,17 +27,6 @@ services:
       - VITE_API_URL=/api
     restart: unless-stopped
 
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    ports:
-      - "80:80" # HTTP 표준 포트
-    depends_on:
-      - frontend
-      - backend
-    restart: unless-stopped
-
   mysql:
     image: mysql:8
     environment:
@@ -54,6 +43,29 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    restart: unless-stopped
+
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - certbot-www:/var/www/certbot # Certbot 인증 파일 저장
+      - certbot-conf:/etc/letsencrypt # 인증서 저장
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-www:/var/www/certbot
+      - certbot-conf:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 24h & wait $${!}; done;'" # Certbot 인증서 갱신; 12시간 마다 갱신
     restart: unless-stopped
 
 volumes:
