--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name example.com;  # 도메인으로 변경
+    server_name choidaruhan.xyz;  # 도메인으로 변경
 
     # Certbot 인증을 위한 경로
     location /.well-known/acme-challenge/ {
@@ -13,11 +13,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name example.com;  # 도메인으로 변경
+    server_name choidaruhan.xyz;  # 도메인으로 변경
 
     # SSL 인증서 경로 (Certbot이 생성한 인증서)
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/choidaruhan.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/choidaruhan.xyz/privkey.pem;
 
     # SSL 설정
     ssl_protocols TLSv1.2 TLSv1.3;
