자체 서명된 인증서 말고 Let's Encrypt 인증서 복사하는 걸로 바꿈

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,9 +7,9 @@ FROM nginx:1.25-alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 # nginx.conf 파일은 Nginx의 기본 설정 파일로, 이 파일을 덮어쓰면 사용자 정의 설정이 적용됩니다.
 
-# 자체 서명된 SSL 인증서와 키 파일을 컨테이너의 Nginx 인증서 디렉토리로 복사합니다.
-COPY certs/cert.pem /etc/nginx/certs/cert.pem
-COPY certs/key.pem /etc/nginx/certs/key.pem
+# Let's Encrypt 인증서 복사
+COPY /etc/letsencrypt/live/choidaruhan.xyz/fullchain.pem /etc/nginx/certs/cert.pem
+COPY /etc/letsencrypt/live/choidaruhan.xyz/privkey.pem /etc/nginx/certs/key.pem
 # cert.pem: SSL 인증서 파일
 # key.pem: SSL 키 파일
 # 이 파일들은 HTTPS 통신을 위해 사용됩니다.
