--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   backend:
     build: ./backend
     container_name: go-blog-backend
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     environment:
       - GIN_MODE=release
     depends_on:
@@ -16,8 +16,8 @@ services:
   frontend:
     build: ./frontend
     container_name: go-blog-frontend
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       - backend
     networks:
@@ -26,8 +26,8 @@ services:
   mysql:
     build: ./mysql
     container_name: go-blog-mysql
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
       - MYSQL_DATABASE=my_database
@@ -44,14 +44,23 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - letsencrypt-data:/etc/letsencrypt
+      - certbot-webroot:/var/www/certbot
     depends_on:
       - backend
       - frontend
     networks:
       - go-blog-network
+    restart: unless-stopped
 
 volumes:
   mysql-data:
+    driver: local
+  letsencrypt-data:
+    driver: local
+  certbot-webroot:
     driver: local
 
 networks:
