--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,40 +1,43 @@
+# HTTP 서버 - HTTPS로 리다이렉트
 server {
     listen 80;
-    server_name choidaruhan.xyz;  # 도메인으로 변경
+    server_name choidaruhan.xyz;
 
-    # Certbot 인증을 위한 경로
+    # Let's Encrypt 인증을 위한 경로
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # HTTP 요청을 HTTPS로 리다이렉트
-    return 301 https://$host$request_uri;
+    # 모든 다른 요청을 HTTPS로 리다이렉트
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
+# HTTPS 서버
 server {
     listen 443 ssl;
-    server_name choidaruhan.xyz;  # 도메인으로 변경
-
-    # SSL 인증서 경로 (Certbot이 생성한 인증서)
-    ssl_certificate /etc/letsencrypt/live/choidaruhan.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/choidaruhan.xyz/privkey.pem;
+    server_name choidaruhan.xyz;
 
     # SSL 설정
+    ssl_certificate /etc/letsencrypt/live/choidaruhan.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/choidaruhan.xyz/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
-    # 프론트엔드 서빙
+    # 프론트엔드 요청 처리
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://go-blog-frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # API 요청 처리
+    # 백엔드 API 요청 처리
     location /api {
-        proxy_pass http://backend:8080;
+        proxy_pass http://go-blog-backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
