--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8080"
     environment:
       - GIN_MODE=release
+    env_file: .env # .env 파일에서 환경 변수 로드
     depends_on:
       - mysql
     networks:
@@ -18,6 +19,7 @@ services:
     container_name: go-blog-frontend
     expose:
       - "3000"
+    env_file: .env # .env 파일에서 환경 변수 로드
     depends_on:
       - backend
     networks:
@@ -28,11 +30,12 @@ services:
     container_name: go-blog-mysql
     expose:
       - "3306"
+    env_file: .env # .env 파일에서 환경 변수 로드
     environment:
-      - MYSQL_ROOT_PASSWORD=my-secret-pw
-      - MYSQL_DATABASE=my_database
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
@@ -48,6 +51,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - letsencrypt-data:/etc/letsencrypt
       - certbot-webroot:/var/www/certbot
+    env_file: .env # .env 파일에서 환경 변수 로드
     depends_on:
       - backend
       - frontend
