--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - "8080"
     environment:
       - GIN_MODE=release
-    env_file: .env # .env 파일에서 환경 변수 로드
+    env_file:
+      - .env
     depends_on:
       - mysql
     networks:
@@ -19,7 +20,8 @@ services:
     container_name: go-blog-frontend
     expose:
       - "3000"
-    env_file: .env # .env 파일에서 환경 변수 로드
+    env_file:
+      - .env
     depends_on:
       - backend
     networks:
@@ -30,7 +32,8 @@ services:
     container_name: go-blog-mysql
     expose:
       - "3306"
-    env_file: .env # .env 파일에서 환경 변수 로드
+    env_file:
+      - .env
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
@@ -42,19 +45,33 @@ services:
       - go-blog-network
 
   nginx:
-    build: ./nginx
-    container_name: go-blog-nginx
+    image: nginx:latest
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - letsencrypt-data:/etc/letsencrypt
-      - certbot-webroot:/var/www/certbot
-    env_file: .env # .env 파일에서 환경 변수 로드
-    depends_on:
-      - backend
-      - frontend
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/logs:/var/log/nginx
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    env_file:
+      - .env
+    environment:
+      - DOMAIN=${DOMAIN}
+    entrypoint: >
+      /bin/sh -c "envsubst '$$DOMAIN' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'"
+    networks:
+      - go-blog-network
+    restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
       - go-blog-network
     restart: unless-stopped
