nginx depends_on: - certbot

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,8 @@ services:
       /bin/sh -c "envsubst '$$DOMAIN' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'"
     networks:
       - go-blog-network
+    depends_on:
+      - certbot
     restart: unless-stopped
 
   certbot:
