--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: nginx
+    container_name: go-blog-nginx
     ports:
       - "80:80"
       - "443:443"
@@ -69,7 +69,7 @@ services:
 
   certbot:
     image: certbot/certbot:latest
-    container_name: certbot
+    container_name: go-blog-certbot
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
