--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,10 @@
-# 베이스 이미지: nginx 1.25 버전의 alpine 버전을 사용합니다.
-FROM nginx:1.25-alpine
+FROM nginx:latest
 
 # 필요한 디렉토리 생성
 RUN mkdir -p /etc/letsencrypt /var/www/certbot /etc/nginx/certs
 
 # Nginx 설정 파일 복사
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/conf.d/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
 
 # Certbot 자동 갱신 스크립트 복사
 COPY ssl-manager.sh /usr/local/bin/ssl-manager.sh
@@ -15,4 +14,4 @@ RUN chmod +x /usr/local/bin/ssl-manager.sh
 EXPOSE 80 443
 
 # Nginx 실행
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["sh", "-c", "envsubst '$$DOMAIN' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
