--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,17 +1,16 @@
 FROM nginx:latest
 
+# envsubst 설치
+RUN apt-get update && apt-get install -y gettext-base
+
 # 필요한 디렉토리 생성
 RUN mkdir -p /etc/letsencrypt /var/www/certbot /etc/nginx/certs
 
 # Nginx 설정 파일 복사
 COPY ./nginx/conf.d/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
 
-# Certbot 자동 갱신 스크립트 복사
-COPY ssl-manager.sh /usr/local/bin/ssl-manager.sh
-RUN chmod +x /usr/local/bin/ssl-manager.sh
-
 # 컨테이너의 80 포트 (HTTP)와 443 포트 (HTTPS)를 외부에 노출합니다.
 EXPOSE 80 443
 
 # Nginx 실행
-CMD ["sh", "-c", "envsubst '$$DOMAIN' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+CMD ["sh", "-c", "envsubst '$$DOMAIN $$EMAIL' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'"]
