docker-compose.initial.yml certbot env_file .env 추가

--- a/docker-compose.initial.yml
+++ b/docker-compose.initial.yml
@@ -19,6 +19,8 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    env_file:
+      - .env
     command: certonly --webroot --webroot-path /var/www/certbot --email ${EMAIL} --agree-tos --no-eff-email -d ${DOMAIN}
     networks:
       - go-blog-network
