--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,5 +1,7 @@
-# go-blog/mysql/Dockerfile
 FROM mysql:8.0
 
-# 데이터베이스 초기화 스크립트 복사
+# 타임존 데이터 설치
+RUN apt-get update && apt-get install -y tzdata && rm -rf /var/lib/apt/lists/*
+
+# 초기화 스크립트 복사
 COPY ./init.sql /docker-entrypoint-initdb.d/
