--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
+      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
     networks:
       - go-blog-network
 
