--- a/docker-compose.initial.yml
+++ b/docker-compose.initial.yml
@@ -26,7 +26,7 @@ services:
       - ./certbot/www:/var/www/certbot
     env_file:
       - .env
-    command: certonly --webroot --webroot-path /var/www/certbot --email ${EMAIL} --agree-tos --no-eff-email -d ${DOMAIN}
+    command: certonly --webroot --webroot-path /var/www/certbot --email ${EMAIL} --agree-tos --no-eff-email -d ${DOMAIN} --force-renewal
     networks:
       - go-blog-network
     depends_on:
