--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,13 @@ services:
     env_file: .env
     command:
       - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false" # 라벨이 있는 컨테이너만 노출
+      - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.myresolver.acme.email=${EMAIL}"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory" # staging 서버 추가
     ports:
       - "80:80"
       - "443:443"
