--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,10 +1,10 @@
 FROM mysql:8.0
 
 # 환경 변수 설정
-ENV MYSQL_ROOT_PASSWORD=my-secret-pw
-ENV MYSQL_DATABASE=my_database
-ENV MYSQL_USER=user
-ENV MYSQL_PASSWORD=password
+ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+ENV MYSQL_DATABASE=${MYSQL_DATABASE}
+ENV MYSQL_USER=${MYSQL_USER}
+ENV MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
 # 데이터베이스 초기화 스크립트 (필요한 경우)
 COPY ./init.sql /docker-entrypoint-initdb.d/
