--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,13 +1,5 @@
+# go-blog/mysql/Dockerfile
 FROM mysql:8.0
 
-# 환경 변수 설정
-ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-ENV MYSQL_DATABASE=${MYSQL_DATABASE}
-ENV MYSQL_USER=${MYSQL_USER}
-ENV MYSQL_PASSWORD=${MYSQL_PASSWORD}
-
-# 데이터베이스 초기화 스크립트 (필요한 경우)
+# 데이터베이스 초기화 스크립트 복사
 COPY ./init.sql /docker-entrypoint-initdb.d/
-
-# MySQL 포트 노출
-EXPOSE 3306
