--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,10 +69,8 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      # - "--certificatesresolvers.myresolver.acme.email=${EMAIL}" # 테스트
-      # - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json" # 테스트
-      - "--certificatesresolvers.myresolver.acme.email=${EMAIL}" # 배포
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json" # 배포
+      - "--certificatesresolvers.myresolver.acme.email=${EMAIL}" # .env 파일의 EMAIL 변수 사용
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
       - "80:80"
       - "443:443"
