--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,21 @@
+# 개발용 빌드
 FROM oven/bun:1.2.5 AS dev
 WORKDIR /app
 COPY package.json bun.lock ./
 RUN bun install
 COPY . .
 EXPOSE 4321
-CMD bun run dev --host  # 수정된 부분
+CMD bun run dev --host
 
 # 프로덕션 빌드
 FROM oven/bun:1.2.5 AS builder
 WORKDIR /app
 COPY package.json bun.lock ./
+COPY ../.env .
 RUN bun install
 COPY . .
-COPY ../.env ./
+ARG DOMAIN
+ENV DOMAIN=$DOMAIN
 RUN bun run build
 
 # 프로덕션 런타임
@@ -20,6 +23,7 @@ FROM oven/bun:1.2.5-slim
 WORKDIR /app
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/.env .
 RUN bun add serve
 EXPOSE 3000
 CMD ["serve", "-s", "dist", "-l", "3000"]
