--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   backend:
     build:
       context: ./backend
+      dockerfile: frontend/Dockerfile
+      args:
+        DOMAIN: ${DOMAIN}
     container_name: go-blog-backend
     expose:
       - "8080"
@@ -25,6 +28,7 @@ services:
   frontend:
     build:
       context: ./frontend
+      dockerfile: frontend/Dockerfile
     container_name: go-blog-frontend
     expose:
       - "3000"
