--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@
 FROM golang:1.24-alpine AS dev
 WORKDIR /app
 RUN go install github.com/air-verse/air@latest
-COPY go.* ./
+COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 EXPOSE 8080
@@ -11,7 +11,7 @@ CMD ["air", "-c", ".air.toml"]
 # 프로덕션 빌드
 FROM golang:1.24-alpine AS builder
 WORKDIR /app
-COPY go.* ./
+COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o server ./cmd/server/main.go
