--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
   backend:
+    platform: linux/amd64
+    image: chl11wq12/goblog-backend:${VERSION}
+    container_name: backend
     build:
       context: ./backend
       args:
-        DOMAIN: ${DOMAIN} # Dockerfile에서 사용할 변수
-    container_name: go-blog-backend
+        DOMAIN: ${DOMAIN}
     expose:
       - "8080"
     environment:
@@ -23,11 +25,13 @@ services:
       - mysql
 
   frontend:
+    platform: linux/amd64
+    image: chl11wq12/goblog-frontend:${VERSION}
+    container_name: frontend
     build:
       context: ./frontend
       args:
         DOMAIN: ${DOMAIN}
-    container_name: go-blog-frontend
     expose:
       - "3000"
     env_file:
@@ -42,8 +46,9 @@ services:
       - go-blog-network
 
   mysql:
-    image: mysql:8.0 # 또는 커스텀 Dockerfile 사용
-    container_name: go-blog-mysql
+    platform: linux/amd64
+    image: chl11wq12/goblog-mysql:8.0
+    container_name: db
     env_file:
       - .env
     environment:
@@ -57,8 +62,9 @@ services:
       - go-blog-network
 
   traefik:
-    image: traefik:v2.10
-    container_name: go-blog-traefik
+    platform: linux/amd64
+    image: chl11wq12/goblog-traefik:v2.10
+    container_name: ssl
     command:
       - --api.dashboard=true
       - --providers.docker=true
