frontend 3000번 포트로 연결되는지 테스트

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o server ./cmd/server/main.go
 # 프로덕션 런타임
 FROM alpine:3.19
 RUN apk --no-cache add ca-certificates tzdata
+ENV TZ=Asia/Seoul
 WORKDIR /app
 COPY --from=builder /app/server .
 EXPOSE 8080
