--- a/traefik.yml
+++ b/traefik.yml
@@ -6,7 +6,7 @@ entryPoints:
 certificatesResolvers:
   myresolver:
     acme:
-      caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
+      caServer: "https://acme-v02.api.letsencrypt.org/directory"
       email: "${EMAIL}"
       storage: "/letsencrypt/acme.json"
       keyType: "EC256"
