--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     networks:
       - go-blog-network
     depends_on:
-      - db
+      - mysql
 
   frontend:
     platform: linux/amd64
