docker-compose.dev.yml 사용 성공

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,13 @@
-# MySQL 설정
-MYSQL_ROOT_PASSWORD=your_root_password
-MYSQL_DATABASE=go_blog
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-# Traefik 설정
+VERSION=v0.1.0
+# 설정
 DOMAIN=choidaruhan.xyz
 EMAIL=chl11wq12@gmail.com
+# MySQL 설정
+DB_ROOT_PASSWORD=gorootpassword
+DB_DATABASE=goblog
+DB_USER=gouser
+DB_PASSWORD=gopassword
+DB_HOST=mysql:3306
+# 환경 설정
+GIN_MODE=release
+NODE_ENV=development
