--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       args:
         DOMAIN: ${DOMAIN}
     expose:
-      - "3000"
+      - "4321"
     env_file:
       - .env
     labels:
@@ -41,7 +41,7 @@ services:
       - "traefik.http.routers.frontend.rule=Host(`${DOMAIN}`) && PathPrefix(`/`)" # 모든 요청을 frontend로 보냄
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.services.frontend.loadbalancer.server.port=4321"
     networks:
       - go-blog-network
 
@@ -53,7 +53,7 @@ services:
       - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
