--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     networks:
       - go-blog-network
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
 
   frontend:
     platform: linux/amd64
@@ -38,7 +39,7 @@ services:
       - .env
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN}`) && PathPrefix(`/`)" # 모든 요청을 frontend로 보냄
+      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN}`) && PathPrefix(`/`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
       - "traefik.http.services.frontend.loadbalancer.server.port=4321"
@@ -48,25 +49,41 @@ services:
   mysql:
     platform: linux/amd64
     image: mysql:8.0
-    container_name: mysql
-    env_file:
-      - .env
+    command: --default-authentication-plugin=mysql_native_password --bind-address=0.0.0.0
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_HOST: "%"
     volumes:
       - mysql-data:/var/lib/mysql
+      - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - go-blog-network
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u${DB_USER}",
+          "-p${DB_PASSWORD}",
+        ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   traefik:
     platform: linux/amd64
     image: traefik:v2.10
     container_name: traefik
+    env_file:
+      - .env
     environment:
-      - EMAIL=${EMAIL} # 명시적으로 환경 변수 정의
+      - EMAIL=${EMAIL}
     command:
       - --api.dashboard=true
       - --providers.docker=true
@@ -79,7 +96,7 @@ services:
       - --entrypoints.web.http.redirections.entrypoint.to=websecure
       - --entrypoints.web.http.redirections.entrypoint.scheme=https
       # Staging 환경 활성화
-      - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+      # - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
     ports:
       - "80:80"
       - "443:443"
