--- a/.env.dev
+++ b/.env.dev
@@ -3,11 +3,11 @@ VERSION=v0.1.0
 DOMAIN=choidaruhan.xyz
 EMAIL=chl11wq12@gmail.com
 # MySQL 설정
-DB_ROOT_PASSWORD=gorootpassword
-DB_DATABASE=goblog
-DB_USER=gouser
-DB_PASSWORD=gopassword
-DB_HOST=mysql:3306
+MYSQL_ROOT_PASSWORD=gorootpassword
+MYSQL_DATABASE=goblog
+MYSQL_USER=gouser
+MYSQL_PASSWORD=gopassword
+MYSQL_HOST=mysql:3306
 # 환경 설정
 GIN_MODE=release
 NODE_ENV=development
